--- a/app/views/impact_adult_arguments_and_violence.html
+++ b/app/views/impact_adult_arguments_and_violence.html
@@ -14,17 +14,20 @@ GOV.UK Prototype Kit
   text: "Back",
   href: "javascript: window.history.go(-1)"
 }) }}
+    <form action="/concerning-impacts" method="post" class="form">
 
-<h1 class="govuk-heading-xl">What impact do you feel this is currently having on the child or young person?</h1>
+      <h1 class="govuk-heading-xl">What impact do you feel this is currently having on the child or young person?</h1>
 
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
+      {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{{ govukRadios({
+      {% set legend = "Adult arguments and violence " + data['concerns-impacts-current-legend'] %}
+
+      {{ govukRadios({
   idPrefix: "impact-adult-arguments-and-violence",
   name: "impact-adult-arguments-and-violence",
   fieldset: {
     legend: {
-      text: "Adult arguments and violence (1 of 3 concerns you identified)",
+      text: legend,
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -64,16 +67,9 @@ GOV.UK Prototype Kit
   ]
 }) }}
 
+      <button class=" govuk-button" data-module="govuk-button">Continue</button>
 
-    {% from "govuk/components/button/macro.njk" import govukButton %}
-
-    {{ govukButton({
-  text: "Continue",
-  href: "#",
-  isStartButton: false
-}) }}
-
-
+    </form>
   </div>
 </div>
 
