--- a/app/views/impact_food.html
+++ b/app/views/impact_food.html
@@ -14,17 +14,19 @@ GOV.UK Prototype Kit
   text: "Back",
   href: "javascript: window.history.go(-1)"
 }) }}
-
-    <h1 class="govuk-heading-xl">What impact do you feel this is currently having on the child or young person?</h1>
     <form action="/concerning-impacts" method="post" class="form">
+
+      <h1 class="govuk-heading-xl">What impact do you feel this is currently having on the child or young person?</h1>
       {% from "govuk/components/radios/macro.njk" import govukRadios %}
+
+      {% set legend = "Food " + data['concerns-impacts-current-legend'] %}
 
       {{ govukRadios({
   idPrefix: "impact_food",
   name: "impact_food",
   fieldset: {
     legend: {
-      text: "Food (1 of 3 concerns you identified)",
+      text: legend,
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
