--- a/app/views/action_already_taken.html
+++ b/app/views/action_already_taken.html
@@ -8,87 +8,140 @@ GOV.UK Prototype Kit
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+ 
 
-    {{ govukBackLink({
-  text: "Back",
-  href: "javascript: window.history.go(-1)"
-}) }}
+    <a href="javascript: window.history.go(-1)" class="govuk-back-link">Back</a>
 
 
-    {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
-    {{ govukCheckboxes({
-  idPrefix: "action-taken",
-  name: "action-taken",
-  fieldset: {
-    legend: {
-      text: "What action has been taken in the last 3 months?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--xl"
-    }
-  },
-  hint: {
-    text: "Select all that apply"
-  },
-  items: [
-    {
-      value: "signposted-to-information",
-      text: "The family has been provided with information and/or pointed towards relevant resources",
-      hint: {
-        text: "These could include links to online resources (e,g 1 Big Database, agencies etc) or printed materials."
-      }
-    },
-    {
-      value: "single_agency_response",
-      text: "A single agency (i.e. your agency or a partner agency) has responded to the family ",
-      hint: {
-        text: "This may include offering specific targeted support."
-      }
-    },
-    {
-      value: "EHA",
-      text: "An Early Help Assessment has been carried out",
-      hint: {
-        text: "The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development."
-      }
-    },
-    {
-      value: "referred_children_services",
-      text: "The concern has been referred to Children Services "
-    }
     
-  ]
-}) }}
+
+    
 
 
-    {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-    {{ govukRadios({
-  idPrefix: "something-else",
-  name: "where-do-you-live",
+
+
+
   
-  items: [
-    {
-      divider: "or"
-    },
-    {
-      value: "other",
-      text: "None of the above, it's something else"
-    }
-  ]
-}) }}
+
+  
+
+  
+
+  
+
+  
+<div class="govuk-form-group">
+
+  <fieldset class="govuk-fieldset" aria-describedby="action-taken-hint">
+  
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+  
+    <h1 class="govuk-fieldset__heading">
+      What action has been taken in the last 3 months?
+    </h1>
+  
+  </legend>
+  
+
+  <span id="action-taken-hint" class="govuk-hint">
+    Select all that apply
+  </span>
 
 
+  <div class="govuk-checkboxes">
+    
+      
+    
+    
+    
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="action-taken" name="action-taken" type="checkbox" value="signposted-to-information" aria-describedby="action-taken-item-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="action-taken">
+        The family has been provided with information and/or pointed towards relevant resources
+      </label>
+      
+      <span id="action-taken-item-hint" class="govuk-hint govuk-checkboxes__hint">
+        These could include links to online resources (e,g 1 Big Database, agencies etc) or printed materials.
+      </span>
+      
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="action-taken-2" name="action-taken" type="checkbox" value="single_agency_response" aria-describedby="action-taken-2-item-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="action-taken-2">
+        A single agency (i.e. your agency or a partner agency) has responded to the family 
+      </label>
+      
+      <span id="action-taken-2-item-hint" class="govuk-hint govuk-checkboxes__hint">
+        This may include offering specific targeted support.
+      </span>
+      
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="action-taken-3" name="action-taken" type="checkbox" value="EHA" aria-describedby="action-taken-3-item-hint">
+      <label class="govuk-label govuk-checkboxes__label" for="action-taken-3">
+        An Early Help Assessment has been carried out
+      </label>
+      
+      <span id="action-taken-3-item-hint" class="govuk-hint govuk-checkboxes__hint">
+        The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on the child’s emotional development.
+      </span>
+      
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="action-taken-4" name="action-taken" type="checkbox" value="referred_children_services">
+      <label class="govuk-label govuk-checkboxes__label" for="action-taken-4">
+        The concern has been referred to Children Services
+      </label>
+      
+    </div>
+    
+    <div class="govuk-radios__divider">or</div>
+
+    
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="action-taken-5" name="action-taken" type="checkbox" value="none">
+      <label class="govuk-label govuk-checkboxes__label" for="action-taken-5">
+        None of the above actions have been taken 
+      </label>
+      
+    </div>
+    
+    
+  </div>
+  </fieldset>
 
 
-    {% from "govuk/components/button/macro.njk" import govukButton %}
+</div>
 
-    {{ govukButton({
-  text: "Continue",
-  href: "#",
-  isStartButton: false
-}) }}
+<a href="#" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+  Continue
+</a>
+
 
 
   </div>
