--- a/public/sass/unbranded.scss
+++ b/public/sass/unbranded.scss
@@ -29,3 +29,5 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 @import "components/aside";
 @import "components/overides";
 @import "components/breakout-box";
+@import "components/grid";
+@import "components/cards";
