--- a/app/views/impact_adult_arguments_and_violence.html
+++ b/app/views/impact_adult_arguments_and_violence.html
@@ -46,14 +46,14 @@ GOV.UK Prototype Kit
       text: "Stress in utero can result in increased cortisol levels which impacts on the neurological development of the unborn brain.
       Neither carer is able to respond appropriately. The frequency and
       duration of verbal abuse is increasing. Children are showing signs of
-      distress and mimicking behaviour at Nursery/School/College
+      distress and mimicking behaviour at Nursery/School/College.
       Child or young person becomes vulnerable to grooming and exploitation as they lack positive self-worth."
     },
     {
       value: "level4",
       text: "Risk of miscarriage, premature labour, stillbirth and impact on the
       neurological development of the vulnerable new born baby.
-      Fear and sense of protection to the Carer leading to either normalising of behaviour or a child that is afraid impacting on the hard wiring of their brain
+      Fear and sense of protection to the Carer leading to either normalising of behaviour or a child that is afraid impacting on the hard wiring of their brain.
       Child or young person feels unsafe, has no positive role model, feels
       protective of the victim of domestic abuse which is impacting on them socially and educationally."
     },
@@ -61,7 +61,7 @@ GOV.UK Prototype Kit
       value: "level5",
       text: "Risk of miscarriage, premature labour, stillbirth. Risk of significant
       physical/emotional harm to new born baby.
-      Child that is at risk of significant emotionally and also at risk of physical harm by becoming involved in the abuse
+      Child that is at risk of significant emotionally and also at risk of physical harm by becoming involved in the abuse.
       Child or young person has suffered long term neglect of their emotional needs due to family environment and is now at high risk of or is already involved in sexual or criminal exploitation either as a perpetrator or victim."
     }
   ]
