--- a/app/views/impact_care_by_other_adults.html
+++ b/app/views/impact_care_by_other_adults.html
@@ -42,7 +42,7 @@ GOV.UK Prototype Kit
     },
     {
       value: "level3",
-      text: "Increased likelihood of harm to child. Raised awareness of the impact at developmental ages of care needs to ensure baby safe and needs are met."
+      text: "Carers needs for attention, affection etc come first. Baby left neglected emotionally and physically for long periods."
     },
     {
       value: "level4",
