--- a/app/views/impact_child_supervision.html
+++ b/app/views/impact_child_supervision.html
@@ -42,7 +42,7 @@ GOV.UK Prototype Kit
     },
     {
       value: "level3",
-      text: "Children at risk of hurting themselves as carers continue to put own needs first and do not provide the supervision necessary to keep children safe.."
+      text: "Children at risk of hurting themselves as carers continue to put own needs first and do not provide the supervision necessary to keep children safe."
     },
     {
       value: "level4",
