--- a/app/views/impact_financial_hardship.html
+++ b/app/views/impact_financial_hardship.html
@@ -38,11 +38,11 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "The carer does not have the resources to provide to meet their families need so adults / children are occasionally left hungry as there is not enough money for food. The children cannot routinely take part in out of school activities."
+      text: "The carer does not have the resources to provide to meet their family’s need so adults / children are occasionally left hungry as there is not enough money for food. The children cannot routinely take part in out of school activities."
     },
     {
       value: "level3",
-      text: "The carer does not have the resources to provide to meet their family’s needs but the money they do have is not priorities for the children who are often left hungry as there is not enough money for food / the house is cold there is no hot water, causing other issues e.g. child’s clothing continues to be unclean / the house is dirty."
+      text: "The carer does not have the resources to provide to meet their family’s needs but the money they do have is not prioritised for the children who are often left hungry as there is not enough money for food / the house is cold there is no hot water, causing other issues e.g. child’s clothing continues to be unclean / the house is dirty."
     }
   ]
 }) }}
