--- a/app/views/impact_hygiene.html
+++ b/app/views/impact_hygiene.html
@@ -38,7 +38,7 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Child is dirty and smelly, teeth are rotting and lead to loss of teeth and increased risk of disease."
+      text: "Child is dirty and smelly, teeth are rotting and leading to loss of teeth and increased risk of disease."
     },
     {
       value: "level3",
@@ -46,11 +46,11 @@ GOV.UK Prototype Kit
     },
     {
       value: "level4",
-      text: "Child bullied at school/college, self-worth and self –esteem impacted on impacted on negatively. Clothes and hair smell, dental decay."
+      text: "Child bullied at school/college, self-worth and self–esteem impacted on negatively. Clothes and hair smell, dental decay."
     },
     {
       value: "level5",
-      text: "Potential for new born baby to become seriously unwell.Child has to have significant numbers of teeth removed. Teased because no longer able to speak properly. Loses weight as unable to eat. Increasingly negative impact on emotional health leading to self-harm, risk of being groomed."
+      text: "Potential for new born baby to become seriously unwell. Child has to have significant numbers of teeth removed. Teased because no longer able to speak properly. Loses weight as unable to eat. Increasingly negative impact on emotional health leading to self-harm, risk of being groomed."
     }
   ]
 }) }}
