--- a/app/views/impact_parental_control_and_boundaries.html
+++ b/app/views/impact_parental_control_and_boundaries.html
@@ -38,7 +38,7 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Child feels insecure, loss self-worth, child distressed by inconsistent parenting response. Parenting courses provide education and support to parent more effectively and gain insight into behaviours at different stages of development."
+      text: "Child feels insecure, loses self-worth, child distressed by inconsistent parenting response. Parenting courses provide education and support to parent more effectively and gain insight into behaviours at different stages of development."
     },
     {
       value: "level3",
@@ -46,7 +46,7 @@ GOV.UK Prototype Kit
     },
     {
       value: "level4",
-      text: "Physical abuse can lead to both physical and emotional harm. As boundaries are inconsistent the impact for the child would be one of confusion"
+      text: "Physical abuse can lead to both physical and emotional harm. As boundaries are inconsistent the impact for the child would be one of confusion."
     },
     {
       value: "level5",
