--- a/app/views/impact_parents_not_seeking_appropriate_advice.html
+++ b/app/views/impact_parents_not_seeking_appropriate_advice.html
@@ -38,7 +38,7 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Potentially puts the unborn baby at risk, and failure to identify conditions that can be identified routinely.  Increased risk of significant ill health and visual loss will impact on learning With support attending routine appointments, support given to manage range of commitments and manage daily routine."
+      text: "Potentially puts the unborn baby at risk, and failure to identify conditions that can be identified routinely.  Increased risk of significant ill health and visual loss will impact on learning. With support attending routine appointments, support given to manage range of commitments and manage daily routine."
     },
     {
       value: "level3",
