--- a/app/views/impact_safe_sleeping_arrangements.html
+++ b/app/views/impact_safe_sleeping_arrangements.html
@@ -38,7 +38,7 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Potential for cot death and for older children spreading diseases head lice and other contagious skin and respiratory conditions. Carers attend support groups and health education sessions facilitated by support agency. Results in improved consideration given to sleeping arrangements in the home."
+      text: "Potential for cot death and for older children spreading diseases, head lice and other contagious skin and respiratory conditions. Carers attend support groups and health education sessions facilitated by support agency. Results in improved consideration given to sleeping arrangements in the home."
     },
     {
       value: "level3",
