--- a/app/views/impact_sexual_relationships.html
+++ b/app/views/impact_sexual_relationships.html
@@ -42,8 +42,8 @@ GOV.UK Prototype Kit
     },
     {
       value: "level3",
-      text: "Friendships and relationships inappropriate for age . Young person
-      appears fearful, exhibiting interest in other risky behaviours e.g. alcohol, substance misuse . Secondary enuresis/encopresis. Sharing images online. Unsafe sexual behaviour albeit reported to be consensual. Compulsive masturbation."
+      text: "Friendships and relationships inappropriate for age. Young person
+      appears fearful, exhibiting interest in other risky behaviours e.g. alcohol, substance misuse. Secondary enuresis/encopresis. Sharing images online. Unsafe sexual behaviour albeit reported to be consensual. Compulsive masturbation."
     },
     {
       value: "level4",
@@ -52,7 +52,7 @@ GOV.UK Prototype Kit
     },
     {
       value: "level5",
-      text: "Sexual activity in exchange for goods, Groomed and at risk of CSE and County Lines. Risk of rape, may request termination and present alone or with someone who will not leave her and answers for her. Frequent and excessive self-harm / overdose. Present extreme behaviour and violence which is out of character. STI’s and UTI’s. May disclose abuse."
+      text: "Sexual activity in exchange for goods. Groomed and at risk of CSE and County Lines. Risk of rape, may request termination and present alone or with someone who will not leave her and answers for her. Frequent and excessive self-harm / overdose. Present extreme behaviour and violence which is out of character. STI’s and UTI’s. May disclose abuse."
     }
   ]
 }) }}
