--- a/app/views/issues_of_concern.html
+++ b/app/views/issues_of_concern.html
@@ -48,7 +48,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-2" name="issues-of-concern" type="checkbox"
                 value="sexual_relationships" aria-describedby="issues-of-concern-2-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-2">
-                Sexual Relationships
+                Sexual relationships
               </label>
 
               <span id="issues-of-concern-2-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -63,7 +63,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-3" name="issues-of-concern" type="checkbox"
                 value="positive_values" aria-describedby="issues-of-concern-3-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-3">
-                Positive Values
+                Positive values
               </label>
 
               <span id="issues-of-concern-3-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -77,7 +77,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-4" name="issues-of-concern" type="checkbox"
                 value="physical_abuse" aria-describedby="issues-of-concern-4-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-4">
-                Physical Abuse
+                Physical abuse
               </label>
 
               <span id="issues-of-concern-4-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -188,7 +188,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-12" name="issues-of-concern" type="checkbox"
                 value="substance_abuse" aria-describedby="issues-of-concern-12-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-12">
-                Substance Abuse
+                Substance abuse
               </label>
 
               <span id="issues-of-concern-12-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -256,7 +256,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-17" name="issues-of-concern" type="checkbox"
                 value="adult_mental_health" aria-describedby="issues-of-concern-17-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-17">
-                Adult Mental Health
+                Adult mental health
               </label>
 
               <span id="issues-of-concern-17-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -270,7 +270,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-18" name="issues-of-concern" type="checkbox"
                 value="parental_control_and_boundaries" aria-describedby="issues-of-concern-18-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-18">
-                Parental Control and Boundaries
+                Parental control and boundaries
               </label>
 
               <span id="issues-of-concern-18-item-hint" class="govuk-hint govuk-checkboxes__hint">
@@ -342,7 +342,7 @@ GOV.UK Prototype Kit
               <input class="govuk-checkboxes__input" id="issues-of-concern-23" name="issues-of-concern" type="checkbox"
                 value="financial_hardship" aria-describedby="issues-of-concern-23-item-hint">
               <label class="govuk-label govuk-checkboxes__label" for="issues-of-concern-23">
-                Financial Hardship
+                Financial hardship
               </label>
 
               <span id="issues-of-concern-23-item-hint" class="govuk-hint govuk-checkboxes__hint">
