bugfix and tweaks

--- a/app/views/outcome_1.html
+++ b/app/views/outcome_1.html
@@ -19,7 +19,8 @@ GOV.UK Prototype Kit
 
 
     <h1 class="govuk-heading-xl">Based on your concerns, we will now ask you to fill out a Safeguarding Request</h1>
-    <p class="govuk-body">All your previous answers will be saved. We will ask you for more detail about your concerns and pass these onto the Childcare Duty Team who will aim to reply within 48 hours.
+    <p class="govuk-body">All your previous answers will be saved. We will ask you for more detail about your concerns
+      and pass these onto the Childcare Duty Team who will aim to reply within 48 hours.
     </p>
 
     {% from "govuk/components/radios/macro.njk" import govukRadios %}
@@ -35,7 +36,7 @@ GOV.UK Prototype Kit
     }
   },
   hint: {
-    text: "Have you informed the family that you are making this request for service and that we will complete welfare checks with other agencies?."
+    text: "Have you informed the family that you are making this request for service and that we will complete welfare checks with other agencies?"
   },
   items: [
     {
@@ -45,7 +46,7 @@ GOV.UK Prototype Kit
         classes: "govuk-label--s"
       },
       hint: {
-        text: "By selecting this you are also confirming that you have informed the family that we will complete welfare check with other agencies."
+        text: "By selecting this you are also confirming you have informed the family that we will complete welfare checks with other agencies and have their consent to pass details onto our Early Help team if necessary."
       }
     },
     {
