--- a/app/views/outcome_1.html
+++ b/app/views/outcome_1.html
@@ -41,7 +41,7 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "yes",
-      text: "Yes, I have consent from the family",
+      text: "Yes, I have informed the family",
       label: {
         classes: "govuk-label--s"
       },
@@ -51,7 +51,7 @@ GOV.UK Prototype Kit
     },
     {
       value: "no",
-      text: "No, I have not got consent from the family",
+      text: "No, I have not informed the family",
       label: {
         classes: "govuk-label--s"
       },
